Fixed register button to use a.button as opposed to button.a Also changed to "Yet to be announced" in schedule. Also added content for contact section, and prizes section. The above two sections need to be aligned properly with css.

--- a/css/base.css
+++ b/css/base.css
@@ -265,7 +265,7 @@ footer ul.container {
     max-width: 60%;
 }
 
-.register {
+a.button {
     border-radius: 20px;
     transition-duration: 0.15s;
     transition-timing-function: ease-in-out;
@@ -278,6 +278,7 @@ footer ul.container {
     min-width: 30%;
     text-decoration: none;
     border: none;
+    text-align: center;
 }
 
 .no-line{
